Bug 163411 - NAVIGATOR: In Content Navigation View buttons to move heading disappear after first use
Summary: NAVIGATOR: In Content Navigation View buttons to move heading disappear after...
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.2.0.0 alpha0+
Hardware: All All
: medium normal
Assignee: Jim Raykowski
URL:
Whiteboard: target:25.2.0
Keywords: regression
Depends on:
Blocks: Navigator
  Show dependency treegraph
 
Reported: 2024-10-13 11:38 UTC by Dieter
Modified: 2024-10-15 17:39 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
video testing the bug (24.41 MB, video/webm)
2024-10-15 14:47 UTC, BogdanB
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Dieter 2024-10-13 11:38:51 UTC
Steps:

1. Open a document with severla headings
2. Open navigator in sidebar and select Conten Navigation View
3. Select a heding and press an arrow button (Promote, demote, move up, move down)

Acutal result
Arrows disappear after pressing one

Expected result
Same result with Content Navigation View off: Arrows still visible and selected arrow is still active
Comment 1 Dieter 2024-10-13 11:44:00 UTC
Tested with

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 8a6919f39b4b871904a2a4199755ca619aa707e2
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL threaded

Different result with

Version: 24.8.1.2 (X86_64) / LibreOffice Community
Build ID: 87fa9aec1a63e70835390b81c40bb8993f1d4ff6
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19045); UI render: default; VCL: win
Locale: de-DE (de_DE); UI: en-GB
Calc: CL threaded

Arrows are still visible but greyed out



Fine in

Version: 7.2.7.2 (x64) / LibreOffice Community
Build ID: 8d71d29d553c0f7dcbfa38fbfda25ee34cce99a2
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: de-DE (de_DE); UI: de-DE
Calc: CL
Comment 2 BogdanB 2024-10-13 17:13:42 UTC Comment hidden (obsolete)
Comment 3 Jim Raykowski 2024-10-14 07:16:40 UTC
I repro when the navigator is set in Headings content navigation mode.

Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: b20e79494c8e7627e941343b0acc3dd74df6cb75
CPU threads: 4; OS: Linux 5.15; UI render: default; VCL: x11
Locale: en-US (en_US.UTF-8); UI: en-US
Calc: threaded

Looking into it.
Comment 4 BogdanB 2024-10-14 16:30:02 UTC
I succeeded to test this bug: I found Content Navigation View option.
Now I will be able to verify this bug after it is solved.

Version: 24.8.2.1 (X86_64) / LibreOffice Community
Build ID: 0f794b6e29741098670a3b95d60478a65d05ef13
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 5 Commit Notification 2024-10-14 20:35:23 UTC
Jim Raykowski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/c69b16a0f859d71a101e2c138887e7975ec71e2a

Resolves tdf#163411 NAVIGATOR: In Content Navigation View buttons to

It will be available in 25.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 BogdanB 2024-10-15 03:48:42 UTC
Thanks, Jim, working well in
Version: 25.2.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: dfeefe2e97a5412a445a3a508acb2d9ae05138e5
CPU threads: 16; OS: Linux 6.8; UI render: default; VCL: gtk3
Locale: ro-RO (ro_RO.UTF-8); UI: en-US
Calc: threaded
Comment 7 BogdanB 2024-10-15 14:38:13 UTC
Jim, thanks, it is working on an already saved document. BUT, it is not working if you open a new document and create the heading and test without saving. After the document is saved, everything works fine. Should I open a new bug?
Comment 8 BogdanB 2024-10-15 14:47:29 UTC
Created attachment 197058 [details]
video testing the bug

Video showing the working case with this patch on saved document, and not working case on new unsaved documents.
Comment 9 BogdanB 2024-10-15 14:48:26 UTC
The "plus" sign is not there on unsaved documents.
Comment 10 Jim Raykowski 2024-10-15 17:39:04 UTC
(In reply to BogdanB from comment #7)
> Jim, thanks, it is working on an already saved document. BUT, it is not
> working if you open a new document and create the heading and test without
> saving. After the document is saved, everything works fine. Should I open a
> new bug?

BogdanB, Nice catch! but I think this is meant for Bug 163191 - Dragging headings in Writer navigator crashes LO Writer ;-) I repro that Headings drag ordering does not work until the file is saved and have a fix ready. Please created a new bug report and add me to the cc list. Thanks!