Resolves tdf#163411 NAVIGATOR: In Content Navigation View buttons to

move heading disappear after first use

Change-Id: I816ff3a7e5016d6316b63c49e5620617fe5a068f
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/174907
Tested-by: Jenkins
Reviewed-by: Jim Raykowski <raykowj@gmail.com>